# caster_moma_description

./: README.md  package.xml
launch/: caster_moma_gen3_model.launch  caster_moma_j2n6s200_model.launch  caster_moma_j2s6s200_model.launch
urdf/: caster_moma_j2n6s200_xacro.xacro  caster_moma_j2n6s200_xacro_standard.xacro  caster_moma_j2s6s200_xacro.xacro  caster_moma_j2s6s200_xacro_standard.xacro
urdf/kinova/: j2n6s200.xacro  j2s6s200.xacro
