<?xml version="1.0"?>
<package format="2">
  <name>caster_moma_description</name>
  <version>1.1.0</version>
  <description>ROS pakcage for Caster MOMA model</description>

  <maintainer email="ye.tian@iquotient-robotics.com">Ye Tian</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/CasterLab/caster_moma_description</url>
  <url type="repository">https://github.com/CasterLab/caster_moma_description</url>
  <url type="bugtracker">https://github.com/CasterLab/caster_moma_description/issues</url>

  <author email="ye.tian@iquotient-robotics.com">Ye Tian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>rviz</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <depend>caster_moma_viz</depend>

  <export>
  </export>
</package>
